<resources>
    <string name="app_name">GraphQLProject</string>
    <string name="name">Name:</string>
    <string name="birthdate">BirthDate:</string>
    <string name="eye_color">Eye Color: </string>
    <string name="gender">Gender:</string>
    <string name="hair_color">Hair color: </string>
    <string name="height">Height: </string>
    <string name="mass">Mass:</string>
    <string name="skin_color">Skin Color:</string>
    <string name="created">Created:</string>
    <string name="edited">Edited:</string>
    <string name="person_image">Person Image</string>
    <string name="title">Title:</string>
    <string name="episode_id">Episode ID:</string>
    <string name="opening_crawl">Opening Crawl:</string>
    <string name="director_s">Director(s):</string>
    <string name="producer_s">Producer(s):</string>
    <string name="release_date">Release Date:</string>
    <string name="diameter">Diameter:</string>
    <string name="rotation_period">Rotation Period:</string>
    <string name="orbital_period">Orbital Period:</string>
    <string name="gravity">Gravity:</string>
    <string name="population">Population:</string>
    <string name="climate">Climate:</string>
    <string name="terrains">Terrains:</string>
    <string name="surface_water">Surface Water:</string>
    <string name="species_image">Species Image:</string>
    <string name="classification">Classification:</string>
    <string name="designation">Designation:</string>
    <string name="average_lifespan">Average Lifespan:</string>
    <string name="eyecolors">eyeColors:</string>
    <string name="haircolors">HairColors:</string>
    <string name="skin_colors">Skin Colors:</string>
    <string name="language">Language:</string>
    <string name="vehicle_image">Vehicle Image:</string>
    <string name="vehicle_class">Vehicle Class:</string>
    <string name="manufacturers">Manufacturers:</string>
    <string name="cost_in_credits">Cost In Credits:</string>
    <string name="length">Length:</string>
    <string name="crew">Crew:</string>
    <string name="passengers">Passengers:</string>
    <string name="max_atmosphering_speed">Max Atmosphering Speed:</string>
    <string name="cargo_capacity">Cargo Capacity:</string>
    <string name="consumables">Consumables:</string>
    <string name="model">Model:</string>
    <string name="film_image">FILM IMAGE</string>
    <string name="person">Person</string>
    <string name="planet">planet</string>
    <string name="species">Species</string>
    <string name="vehicle">Vehicle</string>
    <string name="average_height">Average Height:</string>
    <string name="refresh">Refresh</string>

</resources>
