<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp">
    <ImageView
        android:id="@+id/imageViewVehicle"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:background="@color/colorOrangeLight"
        android:fitsSystemWindows="true"
        android:src="@drawable/ic_vehicle"
        android:contentDescription="@string/vehicle_image" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewVehicle"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">
        <LinearLayout
            android:paddingTop="4dp"
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />
            <TextView
                style="@style/DetailViewText"
                android:id="@+id/textViewNameVehicle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Name" />
        </LinearLayout>
        <LinearLayout
            android:paddingTop="4dp"
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/model" />
            <TextView
                android:id="@+id/textViewModelVehicle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DetailViewText"
                tools:text="Model"/>
        </LinearLayout>
        <LinearLayout
            android:paddingTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_class" />
            <TextView
                android:id="@+id/textViewvehicleClass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DetailViewText"
                tools:text="Vehicle Class" />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manufacturers" />
            <TextView
                style="@style/DetailViewText"
                android:id="@+id/textViewManufacturers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Manufacturers" />
        </LinearLayout>
        <LinearLayout
            android:paddingTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cost_in_credits" />
            <TextView
                style="@style/DetailViewText"
                android:id="@+id/textViewCostInCredits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Cost In Credits" />
        </LinearLayout>
        <LinearLayout
            android:paddingTop="4dp"
            android:id="@+id/linearLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/length" />
            <TextView
                style="@style/DetailViewText"
                android:id="@+id/textViewLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Length" />
        </LinearLayout>
        <LinearLayout
            android:paddingTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crew" />

            <TextView
                style="@style/DetailViewText"
                android:id="@+id/textViewCrew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Crew" />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passengers" />
            <TextView
                style="@style/DetailViewText"
                android:id="@+id/textViewPassengers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Passengers" />
        </LinearLayout>
        <LinearLayout
            android:paddingTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_atmosphering_speed" />

            <TextView
                style="@style/DetailViewText"
                android:id="@+id/textViewmaxAtmospheringSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Max Atmosphering Speed" />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cargo_capacity" />

            <TextView
                style="@style/DetailViewText"
                android:id="@+id/textViewcargoCapacity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Cargo Capacity" />
        </LinearLayout>
        <LinearLayout
            android:paddingTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consumables" />

            <TextView
                style="@style/DetailViewText"
                android:id="@+id/textViewConsumables"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Consumables" />
        </LinearLayout>
        <LinearLayout
            android:paddingTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/created" />
            <TextView
                style="@style/DetailViewText"
                android:id="@+id/textViewCreatedVehicle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Created" />
        </LinearLayout>
        <LinearLayout
            android:paddingTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edited" />
            <TextView
                style="@style/DetailViewText"
                android:id="@+id/textViewEditedVehicle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Edited" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>