<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp">
    <ImageView
        android:id="@+id/imageViewPlanet"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:background="@color/colorPurple"
        android:fitsSystemWindows="true"
        android:src="@drawable/ic_planet"
        android:contentDescription="@string/person_image" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewPlanet"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <LinearLayout
            android:paddingTop="4dp"
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <TextView
                style="@style/DetailViewText"
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Name" />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="4dp"
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diameter" />

            <TextView
                android:id="@+id/textViewDiameter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DetailViewText"
                tools:text="Diameter" />

        </LinearLayout>

        <LinearLayout
            android:paddingTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rotation_period" />

            <TextView
                android:id="@+id/textViewRotationPeriod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DetailViewText"
                tools:text="Rotation Period" />

        </LinearLayout>

        <LinearLayout
            android:paddingTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orbital_period" />

            <TextView
                style="@style/DetailViewText"
                android:id="@+id/textViewOrbitalPeriod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Orbital Period" />


        </LinearLayout>

        <LinearLayout
            android:paddingTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gravity" />

            <TextView
                style="@style/DetailViewText"
                android:id="@+id/textViewGravity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Gravity" />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/population" />

            <TextView
                style="@style/DetailViewText"
                android:id="@+id/textViewPopulation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Population" />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="4dp"
            android:id="@+id/linearLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/climate" />
            <TextView
                style="@style/DetailViewText"
                android:id="@+id/textViewClimate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Climate" />

        </LinearLayout>


        <LinearLayout
            android:paddingTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terrains" />

            <TextView
                style="@style/DetailViewText"
                android:id="@+id/textViewEdited"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Terrains" />
        </LinearLayout>
        <LinearLayout
            android:paddingTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/surface_water" />

            <TextView
                style="@style/DetailViewText"
                android:id="@+id/textViewSurfaceWater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Surface Water" />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/created" />

            <TextView
                style="@style/DetailViewText"
                android:id="@+id/textViewCreatedPlanet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Created" />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edited" />

            <TextView
                style="@style/DetailViewText"
                android:id="@+id/textViewEditedPlanet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Edited" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>