<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    android:background="@drawable/dialog_rounded">
    <ImageView
        android:id="@+id/imageViewPlanet"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/image_background_blue"
        android:fitsSystemWindows="true"
        android:src="@drawable/ic_species"
        android:contentDescription="@string/species_image" />
    <TextView
        android:textColor="@color/colorWhite"
        android:id="@+id/textViewNameSpecies"
        style="@style/DetailViewText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageViewPlanet"
        android:background="@drawable/image_background_blue_bottom"
        android:textSize="28sp"
        tools:text="Name" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewNameSpecies"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">



        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="4dp">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/classification" />

            <TextView
                android:id="@+id/textViewClassification"
                style="@style/DetailViewText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Classification" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="4dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/designation" />

            <TextView
                android:id="@+id/textViewDesignation"
                style="@style/DetailViewText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Designation" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/average_height" />

            <TextView
                android:id="@+id/textViewAverageHeight"
                style="@style/DetailViewText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="AverageHeight" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/average_lifespan" />

            <TextView
                android:id="@+id/textViewLifeSpan"
                style="@style/DetailViewText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Average Lifespan" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eyecolors" />

            <TextView
                android:id="@+id/textViewEyeColorsSpecies"
                style="@style/DetailViewText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Eye Colors" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/haircolors" />

            <TextView
                android:id="@+id/textViewHairColorsSpecies"
                style="@style/DetailViewText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Hair Colors" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="4dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skin_colors" />

            <TextView
                android:id="@+id/textViewSkinColorSpecies"
                style="@style/DetailViewText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Skin Colors" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language" />

            <TextView
                android:id="@+id/textViewLanguage"
                style="@style/DetailViewText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Language" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/created" />

            <TextView
                android:id="@+id/textViewCreatedSpecies"
                style="@style/DetailViewText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Created" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edited" />

            <TextView
                android:id="@+id/textViewEditedSpecies"
                style="@style/DetailViewText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Edited" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>